<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tres">

    <TextView
        android:id="@+id/textViewNames"
        android:layout_width="106dp"
        android:layout_height="28dp"
        android:text="@string/textViewNames_text_title" />

    <EditText
        android:id="@+id/editTextName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/textViewLastNames"
        android:layout_width="107dp"
        android:layout_height="29dp"
        android:text="@string/textViewLastName_text_title" />

    <EditText
        android:id="@+id/editTextLastName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewDividendo"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/textViewDividendo_text_title" />

    <EditText
        android:id="@+id/editTextDivdd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewDivisor"
        android:layout_width="111dp"
        android:layout_height="29dp"
        android:text="@string/textViewDivisor_text_title" />

    <EditText
        android:id="@+id/editTextDivs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:text="@string/textViewNumero_text" />

    <EditText
        android:id="@+id/editTextNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonclose2"
        android:layout_width="403dp"
        android:layout_height="51dp"
        android:onClick="onClick_buttonFinish"
        android:text="@string/button_text_close" />

</LinearLayout>